TestSuite/errors/err0311.pas
type
  I0 = interface
    const x = 5;
  end;

begin
end.